update headings and text aligns, fix mobile issues

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
   float: left;
   width: 28.00%;
   margin-left: 8.66666666667%;
+  margin-top: 2%
 }
 
 .middle {
@@ -50,38 +51,42 @@ body {
 .right {
   width: 25.00%;
   float: right;
+  margin-top: 2%
 }
 
 p {
   margin-top: 0; 
-  text-align: left;
-  color:#e8e9eb
+  color:#e8e9eb;
 }
 
 .description {
   font-size: 0.9em;
 }
 
-h1, h2, h3, h2, h5, h6 {
+h1, h2, h3, h4, h5 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 400;
+  text-align: center;
+  color: #e8e9eb;
+  margin-right: 8.66666666667%;
 }
 
 h1 {
   line-height: 1.2;
   letter-spacing: -.1rem;
-  text-align: left;
-  color: #e8e9eb;
   font-size: 2.5em;
 }
 
 h2 {
   line-height: 1.35;
   letter-spacing: -.08rem;
-  text-align: left;
-  color: #e8e9eb;
   font-size: 1.5em;
+}
+
+h3 {
+  line-height: 1.35;
+  letter-spacing: -.08rem;
 }
 
 .LI-profile-badge {
@@ -91,24 +96,21 @@ h2 {
 }
 
 .rounded {
-  border-radius: 24px;
+  border-radius: 50%;
 }
 
 .logo {
-  position: relative;
-  z-index: 100;
+  display: relative;
+  margin-left: 26.66666666667%;
+  margin-bottom: 10px;
   width: 40%;
 }
 
 a {
   text-decoration: none;
-  transition: color 0.3s linear;
-  -webkit-transition: color 0.3s linear;
-  -moz-transition: color 0.3s linear;
-  color:#e8e9eb;
+  transition: color 1s linear;
+  color:#919191;
   z-index: 20;
-  pointer-events: all;
-  position: relative;
 }
 
 a:hover {
@@ -139,13 +141,6 @@ a:hover {
     width: 100.00%;
     float: left;
     margin-left: 0%;
-  }
-  .logo {
-    position: relative;
-    margin-left: 25%;
-  }
-  .h1 {
-    text-align: center;
   }
 }
 
